# concore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  conanfile.py  conanfile.txt
.github/workflows/: _test_common.sh  ci.yml  test-all.sh  test-clang-7-cxx14.sh  test-clang-7.sh  test-clang-format.sh  test-clang.sh  test-codecov.sh  test-gcc-concepts.sh  test-gcc.sh  test-sanitizer.sh  test-static-checks.sh
docs/: Doxyfile  Makefile  api.rst  concepts.rst  conf.py  cxx23_executors.rst  index.rst  quickstart.rst  requirements.txt
include/concore/: any_executor.hpp  as_invocable.hpp  as_operation.hpp  as_receiver.hpp  as_sender.hpp  conc_for.hpp  conc_reduce.hpp  conc_scan.hpp  conc_sort.hpp  delegating_executor.hpp  dispatch_executor.hpp  except_fun_type.hpp  execution.hpp  executor_type.hpp  finish_task.hpp  global_executor.hpp  immediate_executor.hpp  init.hpp  inline_executor.hpp  integral_iterator.hpp  n_serializer.hpp  partition_hints.hpp  pipeline.hpp  profiling.hpp  rw_serializer.hpp  serializer.hpp  spawn.hpp  task.hpp  task_control.hpp  task_graph.hpp  task_group.hpp  tbb_executor.hpp  thread_pool.hpp  version.hpp.in
include/concore/_concepts/: _concept_operation_state.hpp  _concept_scheduler.hpp  _concept_sender_to.hpp  _concepts_executor.hpp  _concepts_receiver.hpp  _concepts_sender.hpp
include/concore/_cpo/: _cpo_bulk_execute.hpp  (+8 more)
src/: CMakeLists.txt  Config.cmake.in  init.cpp  n_serializer.cpp  pipeline.cpp  rw_serializer.cpp  serializer.cpp  task.cpp  task_control.cpp  task_graph.cpp  task_group.cpp
src/detail/: exec_context.cpp  task_system.cpp
src/include/concore/: any_executor.hpp  as_invocable.hpp  as_operation.hpp  as_receiver.hpp  as_scheduler.hpp  as_sender.hpp  conc_for.hpp  conc_reduce.hpp  conc_sort.hpp  delegating_executor.hpp  execution.hpp  execution_old.hpp  finish_task.hpp  global_executor.hpp  init.hpp  inline_executor.hpp  integral_iterator.hpp  n_serializer.hpp  partition_hints.hpp  rw_serializer.hpp  serializer.hpp  spawn.hpp  task.hpp  task_cancelled.hpp  task_graph.hpp  tbb_executor.hpp  thread_pool.hpp  version.hpp.in
src/include/concore/_concepts/: _concept_operation_state.hpp  _concept_scheduler.hpp  _concept_sender_to.hpp  _concepts_executor.hpp  _concepts_receiver.hpp  _concepts_sender.hpp
src/include/concore/_cpo/: _cpo_connect.hpp  _cpo_execute.hpp  _cpo_schedule.hpp  _cpo_set_done.hpp  _cpo_set_error.hpp  _cpo_set_value.hpp  _cpo_start.hpp  _tag_invoke.hpp
src/include/concore/_gen/c++20/: __utility.hpp  concepts.hpp  coroutine.hpp  execution.hpp  functional.hpp  stop_token.hpp
src/include/concore/computation/: _cpo_run_with.hpp  bind.hpp  computation.hpp  from_function.hpp  from_task.hpp  just_value.hpp  on.hpp  run.hpp  to_task.hpp  transform.hpp  wait.hpp
src/include/concore/computation/detail/: algo_wrapper.hpp  empty_receiver.hpp
src/include/concore/data/: concurrent_dequeue.hpp  concurrent_queue.hpp  concurrent_queue_type.hpp
src/include/concore/data/detail/: nodes.hpp
src/include/concore/detail/: algo_utils.hpp  call_recv_continuation.hpp  concept_macros.hpp  consumer_bounded_queue.hpp  cxx_features.hpp  except_utils.hpp  exec_context_if.hpp  extra_type_traits.hpp  likely.hpp  utils.hpp
src/include/concore/low_level/: concurrent_dequeue.hpp  shared_spin_mutex.hpp
src/include/concore/rxs/: _cpo_start_with.hpp  stream.hpp
src/include/concore/sender_algo/: just.hpp  just_done.hpp  just_error.hpp  let_value.hpp  on.hpp  sync_wait.hpp  transfer_just.hpp  transform.hpp  when_all.hpp
src/lib/: init.cpp  n_serializer.cpp  rw_serializer.cpp  serializer.cpp  task.cpp  task_graph.cpp  task_group.cpp
src/lib/detail/: exec_context.cpp
src/lib/std/: thread_pool.cpp
src/low_level/: semaphore.cpp
src/std/: thread_pool.cpp
test/: CMakeLists.txt  smoke.cpp  test_global_executor.cpp  test_immediate_executor.cpp  test_serializers.cpp  test_task_graph.cpp
test/func/: arb_partition_hints.hpp  profiling_helper_test.cpp  rapidcheck_utils.hpp  test_any_executor.cpp  test_conc_for.cpp  test_conc_reduce.cpp  test_conc_scan.cpp  test_conc_sort.cpp  test_dispatch_executor.cpp  test_executors_match_concept.cpp  test_finish_task.cpp  test_global_executor.cpp  test_immediate_executor.cpp  test_init.cpp  test_inline_executor.cpp  test_pipeline.cpp  test_serializers.cpp  test_spawn.cpp  test_task_continuation.cpp  test_task_control.cpp  test_task_graph.cpp  test_task_group.cpp  test_tbb_executor.cpp  test_wait.cpp
test/func/computation/: test_computation.cpp  test_computation_algos.cpp
test/func/data/: test_concurrent_dequeue.cpp  test_concurrent_queue.cpp
test/func/detail/: test_worker_tasks.cpp
test/func/low_level/: test_concurrent_dequeue.cpp  test_concurrent_queue.cpp  test_mutexes.cpp  test_semaphore.cpp
test/func/rxs/: test_stream.cpp
test/func/std/: test_concept_operation_state.cpp  test_concept_receiver.cpp  test_concept_scheduler.cpp  test_concept_sender.cpp  test_concept_wrappers.cpp  test_concepts.cpp  test_cpo_connect.cpp  test_cpo_execute.cpp  test_cpo_receiver.cpp  test_cpo_schedule.cpp  test_cpo_start.cpp  test_cpo_submit.cpp  test_execution.cpp  test_executor_concepts.cpp  test_just.cpp  test_just_done.cpp  test_just_error.cpp  test_old_sender_algo.cpp  test_sender_algo.cpp  test_sender_done_error.cpp  test_thread_pool.cpp  test_transfer_just.cpp
test/perf/: benchmark_helpers.hpp  perf_conc_for.cpp  perf_conc_reduce.cpp  perf_conc_scan.cpp  perf_conc_sort.cpp  perf_executors.cpp  perf_latency.cpp  perf_queue.cpp
test/test_common/: common_executor_tests.hpp  receivers.hpp  receivers_new.hpp  schedulers.hpp  task_countdown.hpp  task_utils.hpp  throwing_executor.hpp  type_helpers.hpp
test_package/: CMakeLists.txt  conanfile.txt  test.sh  test_package.cpp
tools/: .transform-rules  cpp_transform_tool.py  import_p2300.py  requirements.txt
tools/cpp_transform/: AddInNamespace.py  IncludeToQuotes.py  NamespaceRename.py  ReplaceTokens.py  SurroundTokens.py  TokenIdReplace.py  TransformedUnit.py  _utils.py  rules.py  rules_schema.yaml
(+61 files in other folders)
